<resources>
	<string name="app_name">TestingWS</string>
	<string name="usuario">Usuario</string>
	<string name="clave">Nip / Contraseña</string>
	<string name="iniciar_sesion">INICIAR SESIÓN</string>
	<string name="no_permisos_escritura">La aplicacion no tiene permisos de escritura</string>
	<string name="ext_1">EXT 1</string>
	<string name="ext_2">EXT 2</string>
	<string name="elegir_ext">Elige el EXT a probar</string>
	<string name="continuar">Continuar</string>
	<string name="instancia_cipher">RSA/ECB/PKCS1PADDING</string>
	<string name="error_escritura_jwt">Error de escritura en JWT</string>
	<string name="mensajeCuenta">Introduce\nel código de\nverificación</string>
	<string name="codigoAqui">Introduce el código aquí:</string>
	<string name="enviar">enviar</string>
	<string name="salir">Salir</string>
	<string name="rutaModulo">Ruta módulo</string>
	<string name="cargaJSON">Carga de JSON</string>
	<string name="parametros">Parametros</string>
	<string name="resultado">Resultado</string>
	<string name="directas">Pruebas Directas</string>
	<string name="sin_iniciar_sesion">SIN INICIAR SESIÓN</string>
	<string name="buscar_imagen">BUSCAR IMAGEN</string>
	<string name="path_imagen">Path de imagen</string>
	<string name="log">Log</string>
</resources>
