<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:textSize="22sp"
		android:gravity="center"
		android:text="@string/elegir_ext"/>

	<RadioGroup
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:orientation="horizontal"
		android:weightSum="2">
		<RadioButton
			android:id="@+id/rbtnEXT1"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/ext_1"/>
		<RadioButton
			android:id="@+id/rbtnEXT2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/ext_2"/>
	</RadioGroup>
	<Button
		android:id="@+id/btnContinuar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_gravity="center_horizontal"
		android:text="@string/continuar"/>
</LinearLayout>