<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
	android:padding="@dimen/veinte"
	android:background="@android:color/white">
	
	<TextView
		style="@style/etiquetas_verdes"
		android:text="@string/usuario"/>
	<EditText
		android:id="@+id/etCelular"
		style="@style/caja_verde"
		android:inputType="numberSigned"
		android:maxLength="10"
		android:hint="@string/usuario"
		android:imeOptions="actionNext"/>

	<TextView
		style="@style/etiquetas_verdes"
		android:text="@string/clave"/>
	<EditText
		android:id="@+id/etNipClave"
		style="@style/caja_verde"
		android:hint="@string/clave"
		android:inputType="textNoSuggestions"
		android:imeOptions="actionDone"/>

	<Button
		android:id="@+id/btnIniciarSesion"
		style="@style/boton_rojo"
		android:layout_marginTop="@dimen/veinte"
		android:text="@string/iniciar_sesion"/>

</LinearLayout>